# poc-darkforge

./: .editorconfig  .gitignore  .lefthook.yml  .mise.toml  .windsurfrules  Cargo.toml  LICENCE  README.md  bacon.toml  maskfile.md  package.json  rust-toolchain.toml
.config/: .clippy.toml  .cspell.json  .gitignore  .markdownlint-cli2.jsonc  .rustfmt.toml  tasks.ex.toml  tasks.rs.toml
.github/: .gitignore  dependabot.yml
.github/workflows/: codeql-analysis.yml
.tools/: .gitignore
.tools/cargo-bin/: .gitignore
.tools/cargo-bin/src/: main.rs
.windsurf/: .gitignore
.windsurf/workflows/: ping-pong.md
benches/: .gitignore
benches/data/compositor/: composite.rs
proptest-regressions/: .gitignore  character.txt  dice.txt  progress.txt  roll.txt
proptest-regressions/action/: mod.txt
proptest-regressions/data/: tracker.txt  value.txt
proptest-regressions/roll/: resistance.txt
src/: .gitignore  action.rs  character.rs  dice.rs  lib.rs  main.rs  roll.rs
src/action/: effect.rs  mod.rs  position.rs
src/data/: compositor.rs  mod.rs  tracker.rs  value.rs
src/data/compositor/: composite.rs  mod.rs
src/data/tracker/: array.rs  mod.rs  set.rs
src/harm/: capacity.rs  mod.rs  severity.rs
src/roll/: action.rs  mod.rs  resistance.rs
src/stress/: level.rs  mod.rs  trauma.rs  value.rs
