[package]
name = "darkforge-poc"
version = "0.1.0"
edition = "2021"
authors = [
  "Pierre Fouilloux",
  "Hibiscus Games <https://github.com/HibiscusGames>",
]
description = "A proof of concept CLI for testing the mechanics of the Blades in the Dark SRD by One Seven Design."
license = "AGPL-3.0-or-later"
readme = "README.md"
publish = false

[workspace]
members = [".tools/cargo-bin"]

[lib]
name = "darkforge"
path = "src/lib.rs"

[[bin]]
name = "dfplay"
path = "src/main.rs"

[[bench]]
name = "composite"
path = "benches/data/compositor/composite.rs"
harness = false

[profile.dev]
opt-level = 1 # Better performance while debugging

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
derive_builder = "0.20.2"
dyn-fmt = "0.4.3"
enum-map = "2.7.3"
num-traits = "0.2.19"
rand = "0.9"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.6.0"
paste2 = "1.1.1"
predicates = "3.1"
proptest = "1.6"
rstest = "0.25"

[package.metadata.bin]
cargo-audit = { version = "0.21.2" }
cargo-binstall = { version = "1.12.5" }
cargo-nextest = { version = "0.9.96" }
cargo-xwin = { version = "0.18.4" }
xwin = { version = "0.6.5" }
